--- a/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
@@ -70,7 +70,7 @@
 > The successful methods include, 
 > - Autoregressive models {[WaveNet](2016.09.12_WaveNet.md); [SampleRNN](2016.12.22_SampleRNN.md); kalchbrenner2018efficient}, 
 > - Flow-based models {oord2017parallel,ping2018clarinet, [WaveGlow](2018.10.31_WaveGlow.md), kim2018flowavenet, [WaveFlow](2019.12.03_WaveFlow.md), lee2020nanoflow}, 
-> - GAN-based models {donahue2018adversarial, [MelGAN](2019.10.08_MelGAN.md); [GAN-TTS](2019.09.25_GAN-TTS.md); yamamoto2020parallel, [HiFi-GAN](2020.10.12_HiFi-GAN.md)},
+> - GAN-based models (donahue2018adversarial, [MelGAN](2019.10.08_MelGAN.md); [GAN-TTS](2019.09.25_GAN-TTS.md); [Parallel WaveGAN](2019.10.25_Parallel_WaveGAN.md); [HiFi-GAN](2020.10.12_HiFi-GAN.md)),
 > - Diffusion models {[DiffWave](2020.09.21_DiffWave.md), [WaveGrad](2020.09.02_WaveGrad.md), lee2022priorgrad}.
 >
 > Among these methods, GAN-based vocoders (e.g. [HiFi-GAN](2020.10.12_HiFi-GAN.md)) can generate high-fidelity raw audio conditioned on mel spectrogram, while synthesizing hundreds of times faster than real-time on a single GPU. 
@@ -112,7 +112,7 @@
 > [MelGAN](2019.10.08_MelGAN.md) introduces the multi-scale discriminator (MSD) that uses average pooling to downsample the raw waveform at multiple scales and applies window-based discriminators at each scale separately.
 > It also enforces the mapping between input mel spectrogram and generated waveform via an $\ell_1$ feature matching loss from discriminator.
 > In contrast, [GAN-TTS](2019.09.25_GAN-TTS.md) uses an ensemble of discriminators which operate on random windows of different sizes, and enforces the mapping between the conditioner and waveform adversarially using conditional discriminators.
-> Parallel WaveGAN {yamamoto2020parallel} extends the single short-time Fourier transform (STFT) loss {ping2018clarinet} to multi-resolution, and adds it as an auxiliary loss for GAN training.
+> [Parallel WaveGAN](2019.10.25_Parallel_WaveGAN.md) extends the single short-time Fourier transform (STFT) loss {ping2018clarinet} to multi-resolution, and adds it as an auxiliary loss for GAN training.
 > \cite{yang2021multi} and \cite{mustafa2021stylemelgan} further improve MelGAN by incorporating the multi-resolution STFT loss.
 >
 > [HiFi-GAN](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md) reuses the MSD from MelGAN, and introduces the multi-period discriminator (MPD) for high-fidelity synthesis. 
@@ -139,16 +139,16 @@
 ### Generator
 
 > The generator network takes mel spectrogram or other features as input and output the corresponding raw waveform. 
-> In previous studies, several generator architectures have been applied, including WaveNet [e.g.,][]{yamamoto2020parallel}, or convolutional network that gradually upsamples the mel spectrogram to high-resolution waveform with a stack of residual blocks e.g.,[MelGAN](2019.10.08_MelGAN.md), [HiFi-GAN](2020.10.12_HiFi-GAN.md).
-> We choose the HiFi-GAN generator as the baseline architecture. We believe the proposed techniques are applicable to other generator architectures as well.
+> In previous studies, several generator architectures have been applied, including WaveNet (e.g.,[Parallel WaveGAN](2019.10.25_Parallel_WaveGAN.md)), or convolutional network that gradually upsamples the mel spectrogram to high-resolution waveform with a stack of residual blocks e.g.,[MelGAN](2019.10.08_MelGAN.md), [HiFi-GAN](2020.10.12_HiFi-GAN.md).
+> We choose the [HiFi-GAN](2020.10.12_HiFi-GAN.md) generator as the baseline architecture. We believe the proposed techniques are applicable to other generator architectures as well.
 
 ### Discriminator
 
 > The state-of-the-art GAN vocoders usually comprise several discriminators to guide the generator to synthesize coherent waveform while minimizing perceptual artifacts that are detectable by human ears. 
 > Importantly, each discriminator contains multiple sub-discriminators operating on different resolution windows of the waveform. 
 > For example, [HiFi-GAN](2020.10.12_HiFi-GAN.md) applies two types of discriminators: 
-> \emph{i}) the multi-period discriminator (MPD), where the 1-D signal is reshaped to 2-D representations with varied heights and widths to separately capture the multiple periodic structures though 2-D convolutions. 
-> \emph{ii}) The multi-scale discriminator (MSD) ([MelGAN](2019.10.08_MelGAN.md)), where each sub-discriminator receives down-sampled 1-D signals at different frequency by average pooling in the time domain.
+> 1. the multi-period discriminator (MPD), where the 1-D signal is reshaped to 2-D representations with varied heights and widths to separately capture the multiple periodic structures though 2-D convolutions. 
+> 2. The multi-scale discriminator (MSD) ([MelGAN](2019.10.08_MelGAN.md)), where each sub-discriminator receives down-sampled 1-D signals at different frequency by average pooling in the time domain.
 >
 > \citet{jang2020universal, jang2021univnet} propose to apply the discriminator on the time–frequency domain using the multi-resolution discriminator (MRD), which is composed of several sub-discriminators that operate on multiple 2-D linear spectrograms with different STFT resolutions. 
 > We also find that replacing MSD with MRD  improves audio quality with reduced pitch and periodicity artifacts.
@@ -166,23 +166,23 @@
 > Their activation functions (e.g., {Leaky ReLU}) can produce new details with necessary nonlinearities, but do not provide any periodic inductive bias.
 > Furthermore, we identified that Leaky ReLU behaves poorly for \textit{extrapolation} in waveform domain: although the model can generate high-quality speech signal in a seen recording environment at training, the performance degrades significantly for out-of-distribution scenarios such as unseen recording environments, non-speech vocalizations, and instrumental audio.
 >
-> We introduce a proper inductive bias of periodicity to the generator by applying a recently proposed periodic activation called Snake function {liu2020neural}, defined as $f_{\alpha}(x) = x + \frac{1}{\alpha} \sin^2(\alpha x)$, where $\alpha$ is a trainable parameter that controls the frequency of the periodic component of the signal and larger $\alpha$ gives higher frequency.
+> We introduce a proper inductive bias of periodicity to the generator by applying a recently proposed periodic activation called Snake function {liu2020neural}, defined as $f_{\alpha}(x) = x + \dfrac{1}{\alpha} \sin^2(\alpha x)$, where $\alpha$ is a trainable parameter that controls the frequency of the periodic component of the signal and larger $\alpha$ gives higher frequency.
 > The use of $\sin^2(x)$ ensures monotonicity and renders it amenable to easy optimization. 
 > \citet{liu2020neural} demonstrates this periodic activation exhibits an improved extrapolation capability for temperature and financial data prediction.
 >
-> In ***BigVGAN***, we use Snake activations $f_{\vv\alpha}(x)$ with channel-wise trainable parameters $\vv\alpha\in\mathbb{R}^h$ that define the periodic frequencies for each 1-D convolution channels.
+> In ***BigVGAN***, we use Snake activations $f_{\alpha}(x)$ with channel-wise trainable parameters $\alpha\in\mathbb{R}^h$ that define the periodic frequencies for each 1-D convolution channels.
 > Taking this periodic functional form with learned frequency control, the convolutional module can naturally fit the raw waveform with multi-periodic components.
 > We demonstrate that the proposed Snake-based generator is more robust for out-of-distribution audio samples unseen during training, indicating strong extrapolation capabilities in universal vocoding task.
-> See Figure \ref{fig_visualization_main_text} and Appendix \ref{appendix:visualization} for illustrative examples; ***BigVGAN***-base w/o filter using snake activations is closer to ground-truth sample than HiFi-GAN.
+> See Figure \ref{fig_visualization_main_text} and Appendix \ref{appendix:visualization} for illustrative examples; ***BigVGAN***-base w/o filter using snake activations is closer to ground-truth sample than [HiFi-GAN](2020.10.12_HiFi-GAN.md).
 
 ### Anti-aliased Representation
 
 > The Snake activations provide the required periodic inductive bias for modeling raw waveform, but it can produce arbitrary high frequency details for continuous-time signals that can not be represented by the discrete-time output of the network, which can lead to aliasing artifacts. 
 > (One can think of the neural vocoder as a discrete-time function on the sampled continuous-time signals.)
 > 
-> This side effect can be suppressed by applying a low-pass filter [e.g.,][]{karras2021alias}.
+> This side effect can be suppressed by applying a low-pass filter (e.g.,{karras2021alias}).
 > The anti-aliased nonlinearity operates by upsampling the signal $2\times$ along time dimension, applying the Snake activation, then downsampling the signal by $2\times$, which is a common practice inspired by the Nyquist-Shannon sampling theorem {shannon1949communication}.
-> Each upsampling and downsampling operation is accompanied by the low-pass filter using a windowed \texttt{sinc} filter with a Kaiser window \citep{dsp}.
+> Each upsampling and downsampling operation is accompanied by the low-pass filter using a windowed sinc filter with a Kaiser window \citep{dsp}.
 > Refer to the Appendix \ref{appendix:arch_detail} for details.
 >
 > We apply this filtered Snake nonlinearity in every residual dilated convolution layers within the generator to obtain the anti-aliased representation of the discrete-time 1-D signals.
@@ -198,16 +198,16 @@
 ### BigVGAN with Large Scale Training
 
 > In this subsection, we explore the limits of universal vocoding by scaling up the generator's model size to 112M parameters while maintaining the stability of GAN training and practical usability as a high-speed neural vocoder.
-> We start with our improved generator using the comparable HiFi-GAN V1 configuration with 14M parameters ([HiFi-GAN](2020.10.12_HiFi-GAN.md)), which is denoted as ***BigVGAN***-base.
+> We start with our improved generator using the comparable [HiFi-GAN](2020.10.12_HiFi-GAN.md) V1 configuration with 14M parameters ([HiFi-GAN](2020.10.12_HiFi-GAN.md)), which is denoted as ***BigVGAN***-base.
 >
 > We grow ***BigVGAN***-base by increasing the number of upsampling blocks and convolution channels for each block.
 > The ***BigVGAN***-base upsamples the signal by $256\times$ using 4 upsampling blocks with the ratio of $[8, 8, 2, 2]$.
 > Each upsampling block is accompanied by multiple residual layers with dilated convolutions, i.e., the AMP module. 
 > We further divides the $256\times$ upsampling into 6 blocks $[4, 4, 2, 2, 2, 2]$ for more fine-grained feature refinement. 
-> In addition, we increase the number of channels of AMP module (analogous to MRF in HiFi-GAN) from $512$ to $1536$.
+> In addition, we increase the number of channels of AMP module (analogous to MRF in [HiFi-GAN](2020.10.12_HiFi-GAN.md)) from $512$ to $1536$.
 > We denote the model with $1536$ channels and 112M parameters as ***BigVGAN***.
 >
-> We found that the default learning rate of $2\times10^{-4}$ used in HiFi-GAN causes an early training collapse for ***BigVGAN*** training, where the losses from the discriminator submodules immediately converge to zero after several thousands of iterations.
+> We found that the default learning rate of $2\times10^{-4}$ used in [HiFi-GAN](2020.10.12_HiFi-GAN.md) causes an early training collapse for ***BigVGAN*** training, where the losses from the discriminator submodules immediately converge to zero after several thousands of iterations.
 > Halving the learning rate to $1\times10^{-4}$ was able to reduce such failures. 
 > We also found that large batch size is helpful to reduce mode collapse at training {brock2018large}.
 > We only double the batch size from the usual 16 to 32 for a good trade-off between training efficiency and stability, as neural vocoders can require millions of steps to converge.
@@ -233,12 +233,12 @@
 
 ### 4.1.Training data
 
-> We use LibriTTS \citep{zen2019libritts} dataset with the original sampling rate of 24 kHz for training.
-> Unlike previous studies which only adopted a subset (\texttt{train-clean-100} or \texttt{train-clean-360}) recorded in a clean environment \citep{jang2020universal, jang2021univnet, albadawy2021vocbench}, we use all training data including the subset from diverse recording environments (\texttt{train-full} = \texttt{train-clean-100 + train-clean-360 + train-other-500}), which is unprecedented in the literature.
+> We use [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md) dataset with the original sampling rate of 24 kHz for training.
+> Unlike previous studies which only adopted a subset (`train-clean-100` or `train-clean-360`) recorded in a clean environment \citep{jang2020universal, jang2021univnet, albadawy2021vocbench}, we use all training data including the subset from diverse recording environments (`train-full` = `train-clean-100 + train-clean-360 + train-other-500`), which is unprecedented in the literature.
 > We find that the diversity of the training data is important to achieve the goal towards universal neural vocoding using BigVGAN.
 > The ablation results on training data diversity can be found in Table \ref{tab:data-ablation}.
 > 
-> For OOD experiments, we resample the audio to 24 kHz if necessary using \texttt{kaiser-best} algorithm provided by \texttt{librosa} package.
+> For OOD experiments, we resample the audio to 24 kHz if necessary using `kaiser-best` algorithm provided by `librosa` package.
 >
 > Conventional STFT parameters are engineered to have a limited frequency band [0, 8] kHz by cutting off the high frequency details for easier modeling.
 > On a contrary, we train all models (including the baselines) using a frequency range [0, 12] kHz and a 100-band log-mel spectrogram, which is also used in a recent study towards universal vocoding {jang2021univnet}.
@@ -246,7 +246,7 @@
 
 ### 4.2.Models
 
-> We train all BigVGAN models including the ablation models and the baseline HiFi-GAN using our training configuration for 1M steps.
+> We train all BigVGAN models including the ablation models and the baseline [HiFi-GAN](2020.10.12_HiFi-GAN.md) using our training configuration for 1M steps.
 > We use the batch size of 32, a segment size of 8,192, and a initial learning rate of $1\times10^{-4}$.
 > All other configurations including optimizer, learning rate scheduler, and scalar weights of the loss terms follow the official open-source implementation of [HiFi-GAN](2020.10.12_HiFi-GAN.md) without modification, with an exception that BigVGAN replaces MSD by MRD for the discriminator.
 > All models are trained using NVIDIA DGX-1 with 8 V100 GPUs.
@@ -254,21 +254,21 @@
 >
 > We include a comparison with SC-WaveRNN {paul2020speaker}, a state-of-the-art autoregressive universal neural vocoder based on WaveRNN {kalchbrenner2018efficient}, using the official implementation.
 > We also include two popular flow-based models: [WaveGlow](2018.10.31_WaveGlow.md) and [WaveFlow](2019.12.03_WaveFlow.md), using their official implementation. 
-> For out-of-distribution test, we include the unofficial open-source implementation of UnivNet-c32 {jang2021univnet}, (https://github.com/mindslab-ai/univnet. Note there is no official open-source code.)  which uses \texttt{train-clean-360} subset for training and is reported to outperform HiFi-GAN under the same training configurations.
+> For out-of-distribution test, we include the unofficial open-source implementation of UnivNet-c32 {jang2021univnet}, (https://github.com/mindslab-ai/univnet. Note there is no official open-source code.)  which uses `train-clean-360` subset for training and is reported to outperform [HiFi-GAN](2020.10.12_HiFi-GAN.md) under the same training configurations.
 > See appendix \ref{appendix:more-ablations-ljspeech-vctk} for more details.
 >
 > Table \ref{tab:model_comparison} summarizes the synthesis speed of flow-based and GAN vocoders for generating 24 kHz audio.
 > We omit SC-WaveRNN as it is much slower. 
-> BigVGAN-base with 14M parameters can synthesize the audio 70.18$\times$ faster than real time, which is relatively slower than HiFi-GAN as the filtered \emph{Snake} function requires more computation.
-> HiFi-GAN and BigVGAN are faster than flow-based models, because they are fully parallel ([WaveFlow](2019.12.03_WaveFlow.md) has partial autoregression) and have much fewer layers (WaveGlow has 96 layers).
+> BigVGAN-base with 14M parameters can synthesize the audio 70.18$\times$ faster than real time, which is relatively slower than [HiFi-GAN](2020.10.12_HiFi-GAN.md) as the filtered \emph{Snake} function requires more computation.
+> [HiFi-GAN](2020.10.12_HiFi-GAN.md) and BigVGAN are faster than flow-based models, because they are fully parallel ([WaveFlow](2019.12.03_WaveFlow.md) has partial autoregression) and have much fewer layers (WaveGlow has 96 layers).
 > Our BigVGAN with 112M parameters can synthesize the audio 44.72 $\times$ faster than real-time and keeps the promise as a high-speed neural vocoder.
 
 ### 4.3.Evaluation Metrics
 
 > The objective metrics we collected are designed to measure varied types of distance between the ground-truth audio and the generated sample.
 > We provide 5 different metrics: 
-> 1. Multi-resolution STFT (M-STFT) {yamamoto2020parallel} which measures the spectral distance across multiple resolutions.
-> (We used an open-source implementation from \texttt{Auraloss} \citep{steinmetz2020auraloss}.)
+> 1. Multi-resolution STFT (M-STFT) ([Parallel WaveGAN](2019.10.25_Parallel_WaveGAN.md)) which measures the spectral distance across multiple resolutions.
+> (We used an open-source implementation from `Auraloss` \citep{steinmetz2020auraloss}.)
 > 2. Perceptual evaluation of speech quality (PESQ) {rix2001perceptual}, a widely adopted automated assessment of voice quality.
 > (We used a 16,000Hz wide-band version from \url{https://github.com/ludlows/python-pesq}.)
 > 3. Mel-cepstral distortion (MCD) {kubichek1993mel} with dynamic time warping  which measures the difference between mel cepstra.
@@ -290,19 +290,19 @@
 ### 5.1.LibriTTS Results
 
 > We report the performance of BigVGAN and the baseline models evaluated on LibriTTS using above objective and subjective metrics.
-> We perform objective evaluations on \texttt{dev-clean} and \texttt{dev-other} altogether, and conduct subjective evaluations on the combined \texttt{test-clean} and \texttt{test-other}.
-> The \texttt{dev} and \texttt{test} splits of LibriTTS contains unseen speakers during training, but the recording environments are covered in the train split.
+> We perform objective evaluations on `dev-clean` and `dev-other` altogether, and conduct subjective evaluations on the combined `test-clean` and `test-other`.
+> The `dev` and `test` splits of LibriTTS contains unseen speakers during training, but the recording environments are covered in the train split.
 >
 > Table \ref{tab:libritts-all} shows the in-distribution test results on LibriTTS.
-> Baseline models other than HiFi-GAN performs significantly worse.
+> Baseline models other than [HiFi-GAN](2020.10.12_HiFi-GAN.md) performs significantly worse.
 > This indicates that GAN vocoder is the state-of-the-art for universal neural vocoding.
 > BigVGAN significantly improves all objective metrics.
-> In particular, BigVGAN-base exhibits consistently improved objective scores over HiFi-GAN (V1) with the same amount of paramters, suggesting that it has better periodic inductive bias for waveform data.
+> In particular, BigVGAN-base exhibits consistently improved objective scores over [HiFi-GAN](2020.10.12_HiFi-GAN.md) (V1) with the same amount of paramters, suggesting that it has better periodic inductive bias for waveform data.
 >
-> HiFi-GAN (V1), BigVGAN-base, and BigVGAN perform comparably well in terms of MOS without listening to the ground-truth audio side-by-side. 
-> When the listeners can compare the model sample with ground truth audio side-by-side, BigVGAN-base measurably outperforms HiFi-GAN (V1) in terms of SMOS ($+0.05$), and the 112M BigVGAN outperforms HiFi-GAN by a clear margin in terms of SMOS ($+0.11$) because it has high model capacity to further leverage the diverse training data for better quality.
+> [HiFi-GAN](2020.10.12_HiFi-GAN.md) (V1), BigVGAN-base, and BigVGAN perform comparably well in terms of MOS without listening to the ground-truth audio side-by-side. 
+> When the listeners can compare the model sample with ground truth audio side-by-side, BigVGAN-base measurably outperforms [HiFi-GAN](2020.10.12_HiFi-GAN.md) (V1) in terms of SMOS ($+0.05$), and the 112M BigVGAN outperforms [HiFi-GAN](2020.10.12_HiFi-GAN.md) by a clear margin in terms of SMOS ($+0.11$) because it has high model capacity to further leverage the diverse training data for better quality.
 >
-> In Appendix \ref{appendix:more-ablations-ljspeech-vctk}, we also report the additional results including UnivNet {jang2021univnet} and the ablation models of BigVGAN-base on LibriTTS \texttt{dev} sets, unseen \texttt{VCTK} {yamagishi2019cstr}, and \texttt{LJSpeech} {Ito2017ljspeech} data.
+> In Appendix \ref{appendix:more-ablations-ljspeech-vctk}, we also report the additional results including UnivNet {jang2021univnet} and the ablation models of BigVGAN-base on LibriTTS \texttt{dev} sets, unseen [VCTK](../../Datasets/2012.08.00_VCTK.md), and [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md) data.
 
 ### 5.2.Unseen Languages & Varied Recording Environments
 
@@ -328,9 +328,9 @@
 > This suggests that BigVGAN is significantly more robust to the unseen recording environments thanks to the improved generator design with the AMP module.
 > In Appendix \ref{appendix:asr}, we further demonstrate that BigVGAN is the most linguistically accurate universal vocoder in terms of character error rate (CER) on multiple languages.
 >
-> We test the open-source implementation of UnivNet {jang2021univnet} with the pretrained checkpoint which is trained on \texttt{train-clean-360} subset. 
-> Contrary to the report from \citet{jang2021univnet} that UnivNet-c32 outperformed [HiFi-GAN](2020.10.12_HiFi-GAN.md), we find that the unmodified HiFi-GAN trained on the entire LibriTTS dataset is able to match or outperform UnivNet-c32. 
-> We also train UnivNet-c32 on LibriTTS \texttt{train-full} and find that it is not benefited from larger training data.
+> We test the open-source implementation of UnivNet {jang2021univnet} with the pretrained checkpoint which is trained on `train-clean-360` subset. 
+> Contrary to the report from \citet{jang2021univnet} that UnivNet-c32 outperformed [HiFi-GAN](2020.10.12_HiFi-GAN.md), we find that the unmodified [HiFi-GAN](2020.10.12_HiFi-GAN.md) trained on the entire LibriTTS dataset is able to match or outperform UnivNet-c32. 
+> We also train UnivNet-c32 on LibriTTS `train-full` and find that it is not benefited from larger training data.
 > See Appendix \ref{appendix:more-ablations-ljspeech-vctk} for detailed analysis. 
 
 ### 5.3.Out-of-Distribution Robustness
@@ -346,8 +346,7 @@
 >
 > We also experiment with audios obtained from YouTube videos from real-world recording environments.
 > BigVGAN also exhibits robustness to various types of out-of-distribution signals such as laughter.
-> We provide audio samples to our demo page. 
-> (https://bigvgan-demo.github.io)
+> We provide audio samples to our [demo page](https://bigvgan-demo.github.io).
 
 ### 5.4.Ablation Study
 
@@ -355,23 +354,23 @@
 
 > To measure the effectiveness of the BigVGAN generator, we include SMOS test for the ablation models of BigVGAN-base on MUSDB18-HQ data.
 > Table \ref{tab:musdb-hq} shows that the ablation models exhibit clear degradation on various  scenarios such as instrumental audio (others, mixture).
-> From the average SMOS ratings, 1) disabling the anti-aliasing filter for \emph{Snake} activation performs worse than BigVGAN-base and 2) removing both the filter and \emph{Snake} activation (i.e., vanilla HiFi-GAN trained with MRD replacing MSD) is even worse than the \emph{Snake}-only ablation model, both with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test).
+> From the average SMOS ratings, 1) disabling the anti-aliasing filter for \emph{Snake} activation performs worse than BigVGAN-base and 2) removing both the filter and \emph{Snake} activation (i.e., vanilla [HiFi-GAN](2020.10.12_HiFi-GAN.md) trained with MRD replacing MSD) is even worse than the \emph{Snake}-only ablation model, both with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test).
 > This indicates that Leaky ReLU is not robust enough to extrapolate beyond the learned frequency range and the aliasing artifacts degrade the audio quality in challenging setups.
 > The results show that BigVGAN generator demonstrates strong robustness and extrapolation capability to out-of-distribution scenarios because of the seamless integration of periodic inductive bias and anti-aliased feature representation.
 > See Appendix \ref{appendix:visualization} for the visualization of anti-aliasing effect in BigVGAN.
 
 #### Big model
 
-> We compare HiFi-GAN and BigVGAN both with the largest 112M parameters.
-> We train the 112M HiFi-GAN with the same training setting as BigVGAN.
-> We conduct a pairwise test between the two models on the \texttt{mixture} test set of MUSDB18-HQ which is challenging out-of-distribution data.
+> We compare [HiFi-GAN](2020.10.12_HiFi-GAN.md) and BigVGAN both with the largest 112M parameters.
+> We train the 112M [HiFi-GAN](2020.10.12_HiFi-GAN.md) with the same training setting as BigVGAN.
+> We conduct a pairwise test between the two models on the `mixture` test set of MUSDB18-HQ which is challenging out-of-distribution data.
 > We ask the participants to select a better sounding audio between the samples from the two models.
-> The test shows that 58 $\%$ of the ratings voted to BigVGAN over the large HiFi-GAN and the quality of BigVGAN is greater than the large HiFi-GAN with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test).
+> The test shows that 58 $\%$ of the ratings voted to BigVGAN over the large [HiFi-GAN](2020.10.12_HiFi-GAN.md) and the quality of BigVGAN is greater than the large [HiFi-GAN](2020.10.12_HiFi-GAN.md) with statistical significance (p-value $<$ 0.01 from the Wilcoxon signed-rank test).
 > The results further validate the architectural advantage of BigVGAN in large-scale setting. 
 
 #### Large Training data
 
-> To verify the importance of using large-scale training data, we trained our BigVGAN using less diverse, clean speech-only dataset with the same training configuration for 1M steps: 1) \texttt{train-clean-360} subset of LibriTTS, or 2) VCTK dataset.
+> To verify the importance of using large-scale training data, we trained our BigVGAN using less diverse, clean speech-only dataset with the same training configuration for 1M steps: (1) `train-clean-360` subset of LibriTTS, or (2) VCTK dataset.
 > Table \ref{tab:data-ablation} shows that training BigVGAN on less diverse data shows degradation in both objective metrics and the subjective SMOS on the LibriTTS evaluation sets.
 > The result verifies the importance of using diverse training data and demonstrates the effectiveness of BigVGAN on large-scale datasets.
 
