--- a/Models/Flow/2023.09.06_Matcha-TTS.md
+++ b/Models/Flow/2023.09.06_Matcha-TTS.md
@@ -44,7 +44,7 @@
 
 ## 1.Introduction: 引言
 
-> Diffusion probabilistic models (DPMs) (cf.\ \cite{song2019generative}) are currently setting new standards in deep generative modelling on continuous-valued data-generation tasks such as image synthesis \cite{dhariwal2021diffusion,rombach2022high}, motion synthesis \cite{alexanderson2023listen,mehta2023diff}, and speech synthesis ([WaveGrad](../TTS3_Vocoder/2020.09.02_WaveGrad.md); [WaveGrad2](../TTS3_Vocoder/2021.06.17_WaveGrad2.md); [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [Diff-TTS](../TTS2_Acoustic/Diff-TTS.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)) - the topic of this paper.
+> Diffusion probabilistic models (DPMs) (cf.\ \cite{song2019generative}) are currently setting new standards in deep generative modelling on continuous-valued data-generation tasks such as image synthesis \cite{dhariwal2021diffusion,rombach2022high}, motion synthesis \cite{alexanderson2023listen,mehta2023diff}, and speech synthesis ([WaveGrad](../TTS3_Vocoder/2020.09.02_WaveGrad.md); [WaveGrad2](../TTS3_Vocoder/2021.06.17_WaveGrad2.md); [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)) - the topic of this paper.
 > DPMs define a diffusion process which transforms the data (a.k.a. target) distribution to a prior (a.k.a. source) distribution, e.g., a Gaussian.
 > They then learn a sampling process that reverses the diffusion process.
 > The two processes can be formulated as forward- and reverse-time stochastic differential equations (SDEs) \cite{song2021score}.
@@ -53,7 +53,7 @@
 > The probability flow ODE is a deterministic process for turning source samples into data samples, similar to continuous-time normalising flows (CNF) \cite{chen2018neural}, but without the need to backpropagate through expensive ODE solvers or approximate the reverse ODE using adjoint variables \cite{chen2018neural}.
 >
 > The SDE formulation of DPMs is trained by approximating the score function (the gradients of the log probability density) of the data distribution \cite{song2021score}.
-> The training objective takes the form of a mean squared error (MSE) which can be derived from an evidence lower bound (ELBO) on the likelihood.
+> The training objective takes the form of a mean squared error (MSE) which can be derived from an **Evidence Lower BOund (ELBO)** on the likelihood.
 > This is fast and simple and, unlike typical normalizing flow models, does not impose any restrictions on model architecture.
 > But whilst they allow efficient training without numerical SDE/ODE solvers, DPMs suffer from slow synthesis speed, since each sample requires numerous iterations (steps), computed in sequence, to accurately solve the SDE.
 > Each such step requires that an entire neural network be evaluated.
@@ -76,7 +76,7 @@
 ### 2.1.Recent Encoder-Decoder TTS Architectures
 
 > DPMs have been applied to numerous speech-synthesis tasks with impressive results, including waveform generation ([WaveGrad](../TTS3_Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)) and end-to-end TTS ([WaveGrad2](../TTS3_Vocoder/2021.06.17_WaveGrad2.md)).
-> [Diff-TTS](../TTS2_Acoustic/Diff-TTS.md) was first to apply DPMs for acoustic modelling.
+> [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md) was first to apply DPMs for acoustic modelling.
 > Shortly after, [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) conceptualised the diffusion process as an SDE.
 > Although these models, and descendants like [Fast Grad-TTS](../_tmp/Fast_Grad-TTS.md), are non-autoregressive, \mbox{TorToiSe} \cite{betker2023better} demonstrated DPMs in an autoregressive TTS model with quantised latents.
 > 
@@ -91,7 +91,7 @@
 >
 > Modern TTS architectures also differ in terms of decoder network design.
 > The normalising-flow based methods [Glow-TTS](../TTS2_Acoustic/2020.05.22_Glow-TTS.md) and [OverFlow](../TTS2_Acoustic/2022.11.13_OverFlow.md) use dilated 1D-convolutions.
-> DPM-based methods like [Diff-TTS](../TTS2_Acoustic/Diff-TTS.md) and [ProDiff](../_tmp/ProDiff.md) likewise use 1D convolutions to synthesise mel spectrograms.
+> DPM-based methods like [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md) and [ProDiff](../_tmp/ProDiff.md) likewise use 1D convolutions to synthesise mel spectrograms.
 > [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md), in contrast, uses a U-Net with 2D-convolutions.
 > This treats mel spectrograms as images and implicitly assumes translation invariance in both time and frequency.
 > However, speech mel-spectra are not fully translation-invariant along the frequency axis, and 2D decoders generally require more memory as they introduce an extra dimension to the tensors.
