--- a/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
@@ -69,14 +69,14 @@
 > Deep generative models have demonstrated noticeable successes for modeling raw audio.
 > The successful methods include, 
 > - Autoregressive models {[WaveNet](2016.09.12_WaveNet.md); [SampleRNN](2016.12.22_SampleRNN.md); kalchbrenner2018efficient}, 
-> - Flow-based models {oord2017parallel,ping2018clarinet, [WaveGlow](2018.10.31_WaveGlow.md), kim2018flowavenet, [WaveFlow](2019.12.03_WaveFlow.md), lee2020nanoflow}, 
+> - Flow-based models {oord2017parallel,[ClariNet](../E2E/2018.07.19_ClariNet.md), [WaveGlow](2018.10.31_WaveGlow.md), kim2018flowavenet, [WaveFlow](2019.12.03_WaveFlow.md), lee2020nanoflow}, 
 > - GAN-based models (donahue2018adversarial, [MelGAN](2019.10.08_MelGAN.md); [GAN-TTS](2019.09.25_GAN-TTS.md); [Parallel WaveGAN](2019.10.25_Parallel_WaveGAN.md); [HiFi-GAN](2020.10.12_HiFi-GAN.md)),
 > - Diffusion models {[DiffWave](2020.09.21_DiffWave.md), [WaveGrad](2020.09.02_WaveGrad.md), lee2022priorgrad}.
 >
 > Among these methods, GAN-based vocoders (e.g. [HiFi-GAN](2020.10.12_HiFi-GAN.md)) can generate high-fidelity raw audio conditioned on mel spectrogram, while synthesizing hundreds of times faster than real-time on a single GPU. 
 > However, existing GAN vocoders are confined to the settings with a moderate number of voices recorded in clean environment due to the limited model capacity.
 > The audio quality can heavily degrade when the models are conditioned on mel spectrogram from unseen speakers in different recording environments. 
-> In practice, a \emph{universal vocoder}, that can do zero-shot generation for out-of-distribution samples, is very valuable in many real-world applications, including text-to-speech with numerous speakers {ping2017deep}, neural voice cloning {arik2018neural, jia2018transfer}, voice conversion {liu2018wavenet}, speech-to-speech translation {jia2019direct}, and neural audio codec {zeghidour2021soundstream}.
+> In practice, a \emph{universal vocoder}, that can do zero-shot generation for out-of-distribution samples, is very valuable in many real-world applications, including text-to-speech with numerous speakers {ping2017deep}, neural voice cloning {arik2018neural, jia2018transfer}, voice conversion {liu2018wavenet}, speech-to-speech translation {jia2019direct}, and neural audio codec ([SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md)).
 > In these applications, the neural vocoder also needs to generalize well for audio recorded at various conditions.
 >
 > Scaling up the model size for zero-shot performance is a noticeable trend in text generation (e.g.,{brown2020language}) and image synthesis (e.g.,{ramesh2021zero}), but has not been explored in audio synthesis.
@@ -112,7 +112,7 @@
 > [MelGAN](2019.10.08_MelGAN.md) introduces the multi-scale discriminator (MSD) that uses average pooling to downsample the raw waveform at multiple scales and applies window-based discriminators at each scale separately.
 > It also enforces the mapping between input mel spectrogram and generated waveform via an $\ell_1$ feature matching loss from discriminator.
 > In contrast, [GAN-TTS](2019.09.25_GAN-TTS.md) uses an ensemble of discriminators which operate on random windows of different sizes, and enforces the mapping between the conditioner and waveform adversarially using conditional discriminators.
-> [Parallel WaveGAN](2019.10.25_Parallel_WaveGAN.md) extends the single short-time Fourier transform (STFT) loss {ping2018clarinet} to multi-resolution, and adds it as an auxiliary loss for GAN training.
+> [Parallel WaveGAN](2019.10.25_Parallel_WaveGAN.md) extends the single short-time Fourier transform (STFT) loss ([ClariNet](../E2E/2018.07.19_ClariNet.md)) to multi-resolution, and adds it as an auxiliary loss for GAN training.
 > \cite{yang2021multi} and \cite{mustafa2021stylemelgan} further improve MelGAN by incorporating the multi-resolution STFT loss.
 >
 > [HiFi-GAN](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md) reuses the MSD from MelGAN, and introduces the multi-period discriminator (MPD) for high-fidelity synthesis. 
