--- a/Models/Flow/2023.09.06_Matcha-TTS.md
+++ b/Models/Flow/2023.09.06_Matcha-TTS.md
@@ -44,7 +44,7 @@
 
 ## 1.Introduction: 引言
 
-> Diffusion probabilistic models (DPMs) (cf.\ \cite{song2019generative}) are currently setting new standards in deep generative modelling on continuous-valued data-generation tasks such as image synthesis \cite{dhariwal2021diffusion,rombach2022high}, motion synthesis \cite{alexanderson2023listen,mehta2023diff}, and speech synthesis ([WaveGrad](../TTS3_Vocoder/2020.09.02_WaveGrad.md); [WaveGrad2](../TTS3_Vocoder/2021.06.17_WaveGrad2.md); [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)) - the topic of this paper.
+> Diffusion probabilistic models (DPMs) (cf. [NCSN](../_Basis/2019.07.12_NCSN.md)) are currently setting new standards in deep generative modelling on continuous-valued data-generation tasks such as image synthesis ([Guided_Diffusion](../_Basis/2021.05.11_Guided_Diffusion.md); [LDM](../_Basis/2021.12.20_LDM.md)), motion synthesis \cite{alexanderson2023listen,mehta2023diff}, and speech synthesis ([WaveGrad](../TTS3_Vocoder/2020.09.02_WaveGrad.md); [WaveGrad2](../TTS3_Vocoder/2021.06.17_WaveGrad2.md); [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)) - the topic of this paper.
 > DPMs define a diffusion process which transforms the data (a.k.a. target) distribution to a prior (a.k.a. source) distribution, e.g., a Gaussian.
 > They then learn a sampling process that reverses the diffusion process.
 > The two processes can be formulated as forward- and reverse-time stochastic differential equations (SDEs) \cite{song2021score}.
@@ -78,14 +78,14 @@
 > DPMs have been applied to numerous speech-synthesis tasks with impressive results, including waveform generation ([WaveGrad](../TTS3_Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)) and end-to-end TTS ([WaveGrad2](../TTS3_Vocoder/2021.06.17_WaveGrad2.md)).
 > [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md) was first to apply DPMs for acoustic modelling.
 > Shortly after, [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) conceptualised the diffusion process as an SDE.
-> Although these models, and descendants like [Fast Grad-TTS](../_tmp/Fast_Grad-TTS.md), are non-autoregressive, \mbox{TorToiSe} \cite{betker2023better} demonstrated DPMs in an autoregressive TTS model with quantised latents.
+> Although these models, and descendants like [Fast Grad-TTS](../_tmp/Fast_Grad-TTS.md), are non-autoregressive, [TorToiSe-TTS](../_tmp/2023.05.12_TorToise-TTS.md) demonstrated DPMs in an autoregressive TTS model with quantised latents.
 > 
 > The above models -- like many modern TTS acoustic models -- use an encoder-decoder architecture with Transformer blocks in the encoder.
 > Many models, e.g., [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md) and [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md), use sinusoidal position embeddings for positional dependences.
-> This has been found to generalise poorly to long sequences; cf.\ \cite{press2022train}.
+> This has been found to generalise poorly to long sequences; cf. [AliBi](../../Modules/Attention/AliBi.md).
 > [Glow-TTS](../TTS2_Acoustic/2020.05.22_Glow-TTS.md), [VITS](../E2E/2021.06.11_VITS.md), and [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) instead use relative positional embeddings \cite{shaw2018self}.
 > Unfortunately, these treat inputs outside a short context window as a "bag of words", often resulting in unnatural prosody.
-> [LinearSpeech](../_tmp/LinearSpeech.md) instead employed rotational position embeddings (RoPE) in [RoFormer](../_Transformer/2021.04.20_RoFormer.md), which have computational and memory advantages over relative embeddings and generalise to longer distances \cite{wennberg2021case,press2022train}.
+> [LinearSpeech](../_tmp/LinearSpeech.md) instead employed rotational position embeddings (RoPE) in [RoFormer](../_Transformer/2021.04.20_RoFormer.md), which have computational and memory advantages over relative embeddings and generalise to longer distances (wennberg2021case; [AliBi](../../Modules/Attention/AliBi.md)).
 > ***Matcha-TTS*** thus uses Transformers with RoPE in the encoder, reducing RAM use compared to [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 > We believe ours is the first SDE or ODE-based TTS method to use RoPE.
 >
@@ -96,7 +96,7 @@
 > This treats mel spectrograms as images and implicitly assumes translation invariance in both time and frequency.
 > However, speech mel-spectra are not fully translation-invariant along the frequency axis, and 2D decoders generally require more memory as they introduce an extra dimension to the tensors.
 > Meanwhile, non-probabilistic models like FastSpeech 1 and 2 have demonstrated that decoders with (1D) Transformers can learn long-range dependencies and fast, parallel synthesis.
-> ***Matcha-TTS*** also uses Transformers in the decoder, but in a 1D U-Net design inspired by the 2D U-Nets in the Stable Diffusion image-generation model \cite{rombach2022high}.
+> ***Matcha-TTS*** also uses Transformers in the decoder, but in a 1D U-Net design inspired by the 2D U-Nets in the Stable Diffusion image-generation model ([LDM](../_Basis/2021.12.20_LDM.md)).
 >
 > Whilst some TTS systems, e.g., [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md), rely on externally-supplied alignments, most systems are capable of learning to speak and align at the same time, although it has been found to be important to encourage or enforce monotonic alignments \cite{watts2019where,mehta2022neuralhmm} for fast and effective training.
 > One mechanism for this is monotonic alignment search (MAS), used by, e.g., [Glow-TTS](../TTS2_Acoustic/2020.05.22_Glow-TTS.md) and [VITS](../E2E/2021.06.11_VITS.md).
@@ -107,7 +107,7 @@
 
 ### 2.2.Flow Matching and TTS
 
-> Currently, some of the highest-quality TTS systems either utilize DPMs ([Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); betker2023better) or discrete-time normalizing flows ([VITS](../E2E/2021.06.11_VITS.md); [OverFlow](../TTS2_Acoustic/2022.11.13_OverFlow.md)), with continuous-time flows being less explored.
+> Currently, some of the highest-quality TTS systems either utilize DPMs ([Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [TorToiSe-TTS](../_tmp/2023.05.12_TorToise-TTS.md)) or discrete-time normalizing flows ([VITS](../E2E/2021.06.11_VITS.md); [OverFlow](../TTS2_Acoustic/2022.11.13_OverFlow.md)), with continuous-time flows being less explored.
 > Lipman et al.\ \cite{lipman2023flow} recently introduced a framework for synthesis using ODEs that unifies and extends probability flow ODEs and CNFs.
 > They were then able to present an efficient approach to learn ODEs for synthesis, using a simple vector-field regression loss called **conditional flow matching (CFM)**, as an alternative to learning score functions for DPMs or using numerical ODE solvers at training time like classic CNFs \cite{chen2018neural}.
 > Crucially, by leveraging ideas from optimal transport, CFM can be set up to yield ODEs that have simple vector fields that change little during the process of mapping samples from the source distribution onto the data distribution, since it essentially just transports probability mass along straight lines.
@@ -119,7 +119,7 @@
 > [Voicebox (VB)](../Speech_LLM/2023.06.23_VoiceBox.md) is a system that performs various text-guided speech-infilling tasks based on large-scale training data, with its English variant (VB-En) being trained on 60k hours of proprietary data.
 > VB differs substantially from ***Matcha-TTS***:
 > VB performs TTS, denoising, and text-guided acoustic infilling trained using a combination of masking and CFM, whereas ***Matcha-TTS*** is a pure TTS model trained solely using OT-CFM.
-> VB uses convolutional positional encoding with AliBi \cite{press2022train} self-attention bias, whilst our text encoder uses RoPE.
+> VB uses convolutional positional encoding with [AliBi](../../Modules/Attention/AliBi.md) self-attention bias, whilst our text encoder uses RoPE.
 > In contrast to VB, we train on standard data and make code and checkpoints publicly available.
 > VB-En consumes 330M parameters, which is 18 times larger than the ***Matcha-TTS*** model in our experiments.
 > Also, VB uses external alignments for training whereas ***Matcha-TTS*** learns to speak without them.
@@ -183,7 +183,7 @@ $\sigma_{\mathrm{min}}$ is a hyperparameter with a small value (1e-4 in our expe
 > This mean is used to condition the decoder that predicts the vector field $v_t(\phi^{\mathrm{OT}}_t(x_0) | \boldsymbol{\mu}; \theta)$ used for synthesis, but is not used as the mean for the initial noise samples $x_0$ (unlike [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
 >
 > \cref{fig: decoder architecture} shows the ***Matcha-TTS*** decoder architecture.
-> Inspired by \cite{rombach2022high}, it is a U-Net containing 1D convolutional residual blocks to downsample and upsample the inputs, with the flow-matching step $t\in[0,1]$ embedded as in [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
+> Inspired by [LDM](../_Basis/2021.12.20_LDM.md), it is a U-Net containing 1D convolutional residual blocks to downsample and upsample the inputs, with the flow-matching step $t\in[0,1]$ embedded as in [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 > Each residual block is followed by a Transformer block, whose feed forward nets use snake beta activations ([BigVGAN](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
 > These Transformers do not use any position embeddings, since between-phone positional information already has been baked in by the encoder, and the convolution and downsampling operations act to interpolate these between frames within the same phone and distinguish their relative positions from each other.
 > This decoder network is significantly faster to evaluate and consumes less memory than the 2D convolutional-only U-Net used by [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
