--- a/Models/Speech_LLM/2024.02.12_BASE-TTS.md
+++ b/Models/Speech_LLM/2024.02.12_BASE-TTS.md
@@ -132,9 +132,9 @@
 ### Discrete Speech Representations
 
 > In audio generative AI, the first acoustic encoders used in GPT-TTS are [VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md), [SoundStream [35]](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) and [EnCodec [36]](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md), which are deep learning audio compression techniques producing discrete acoustic token based on vector quantization.
-> These acoustic encoders are shown to be superior to Mel-spectrograms \cite{DBLP:journals/corr/abs-2309-10922, yang2023towards}, but ignore semantic information and are unnecessarily complex due to lack of disentanglement ([RepCodec [65]](../../Models/Speech_Neural_Codec/RepCodec.md)).
+> These acoustic encoders are shown to be superior to Mel-spectrograms \cite{DBLP:journals/corr/abs-2309-10922, yang2023towards}, but ignore semantic information and are unnecessarily complex due to lack of disentanglement ([RepCodec [65]](../Speech_Neural_Codec/2023.08.31_RepCodec.md)).
 > [AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md) combines SoundStream tokens with semantic BERT tokens \cite{chung2021w2v}.
-> [SpeechTokenizer [67]](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md) and [RepCodec [65]](../../Models/Speech_Neural_Codec/RepCodec.md) aim to capture semantics by adding self-supervised embedding prediction-based losses \cite{mohamed2022self}.
+> [SpeechTokenizer [67]](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md) and [RepCodec [65]](../Speech_Neural_Codec/2023.08.31_RepCodec.md) aim to capture semantics by adding self-supervised embedding prediction-based losses \cite{mohamed2022self}.
 > ***BASE TTS*** builds acoustic tokens by leveraging semantic information from self-supervised embeddings and disentangling speaker information from the acoustic tokens.
 > Then, it applies byte-pair encoding on these tokens to reduce memory requirement, allowing the model to train on longer sequences.
 
@@ -167,10 +167,9 @@
 
 ### ***BASE TTS*** has Data Efficiency Built-In
 
-> Low-resource TTS has focused on reducing the required amount of high quality training data through e.g.
-> voice conversion \cite{huybrechts2021low}, data generation \cite{DBLP:conf/icassp/LajszczakPKBBJN22}, modeling techniques \cite{DBLP:journals/corr/abs-2307-07062}, or recording script optimizations \cite{shamsi2020tts}.
+> Low-resource TTS has focused on reducing the required amount of high quality training data through e.g. voice conversion [huybrechts2021low [88]](), data generation \cite{DBLP:conf/icassp/LajszczakPKBBJN22}, modeling techniques \cite{DBLP:journals/corr/abs-2307-07062}, or recording script optimizations \cite{shamsi2020tts}.
 > This stems from the early difficulty of ingesting a high volume of data from multiple speakers in potentially different styles or languages.
-> A step up in that direction is zero-shot inference such as in Bark \footnote{\url{https://github.com/suno-ai/bark}} and \cite{casanova2022yourtts, wu2022adaspeech}, which aim to clone a voice with only a few seconds of recordings.
+> A step up in that direction is zero-shot inference such as in [Bark](https://github.com/suno-ai/bark) and [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), [AdaSpeech4 [91]](../../Models/TTS2_Acoustic/2022.04.01_AdaSpeech4.md), which aim to clone a voice with only a few seconds of recordings.
 > Due to leveraging a substantially larger dataset, a bigger model, and a dedicated speaker encoder, ***BASE TTS*** and the recent LTTS models set a new standard in data efficiency.
 
 ## 3.Methodology: 方法
@@ -196,7 +195,7 @@
 >
 > In Section \ref{sec:wavlm}, however, we introduce a novel method of learning speech representations through WavLM-based speechcodes.
 > In this method, we discretize features extracted from a WavLM SSL model to reconstruct a mel-spectrogram.
-> We apply additional loss functions to promote speaker disentanglement, and compress the resulting speechcodes using Byte-Pair Encoding (BPE) \cite{bpe} to reduce sequence length, enabling us to model longer audio with Transformers.
+> We apply additional loss functions to promote speaker disentanglement, and compress the resulting speechcodes using [Byte-Pair Encoding (BPE)](../../Models/_Basis/BPE.md) to reduce sequence length, enabling us to model longer audio with Transformers.
 >
 > Both representations are compressed (325 bits/s and 400 bits/s respectively) to allow more efficient autoregressive modeling compared to popular audio codecs (e.g. 6k bits/s in [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md)).
 > With this level of compression, we aim to remove information from speechcodes that can be reconstructed during decoding (speaker, audio noise, etc.) to ensure that the capacity in speechcodes is primarily dedicated to encoding phonetic and prosodic information.
@@ -241,10 +240,10 @@ $$
     L = L_\text{recon} + \alpha L_\text{commitment} + \beta L_\text{contrastive} + \gamma L_\text{cosine}
 $$
 
-#### 3.2.3.Byte-pair encoding on speechcodes
+#### 3.2.3.Byte-Pair Encoding on Speechcodes
 
 > The WavLM-based speech representations are learned at a frequency of 50 Hz to ensure that they offer enough resolution in time to be able to discriminate between single phonemes even in fast-paced speech (the average length of English phonemes tends not to dip below 20ms \cite{kuwabara1996acoustic}).
-> We apply Byte-Pair Encoding \cite{bpe} to reduce the average sequence length of speechcodes by around 40\%, in order to mitigate the quadratic memory increases in Transformers sequence length and minimize complexity for the autoregressive model.
+> We apply [Byte-Pair Encoding ](../_Basis/BPE.md) to reduce the average sequence length of speechcodes by around 40\%, in order to mitigate the quadratic memory increases in Transformers sequence length and minimize complexity for the autoregressive model.
 > Similar to the BPE of texts, we iteratively join the most frequent pairs of speechcodes into new tokens and add them to the vocabulary until a pre-determined vocabulary size is reached. 
 
 ### 3.3.Autoregressive Speech Modeling (SpeechGPT)
@@ -305,7 +304,7 @@ $$
 > To generate the transcript for the dataset, we initially relied on the ASR transcription.
 > We found that ASR tends to generate a smaller set of punctuations than their natural occurrences.
 > For example, it over-generates commas instead of colons and semicolons, and rarely generates parenthesis.
-> We then perform partial text restoration (similar to \cite{kang2023libriheavy}) by: 
+> We then perform partial text restoration (similar to [Libriheavy [56]](../../Datasets/2023.09.15_Libriheavy.md)) by: 
 > 1) searching for source texts from the Internet and tying them to each recording; 
 > 2) matching the ASR transcript with the source text sentence by sentence, replacing the former with latter if their difference is small enough (length no longer/shorter by a factor of 3 and within a certain edit distance).
 > We restore around 1/2 of total texts to the `original`, resulting in an 300\% increase in quotation marks of all kinds and 20000\% increase in parentheses in the transcript.
@@ -345,28 +344,28 @@ $$
 
 > Three types of tests are considered to assess the model quality:
 >
-> - \textbf{MUSHRA (Multiple Stimuli with Hidden Reference and Anchor)} among competing systems by native listeners in US English and Spanish.
+> - **MUSHRA (Multiple Stimuli with Hidden Reference and Anchor)** among competing systems by native listeners in US English and Spanish.
 > We use a MUSHRA scale ranging from 0 to 100.
 > We do not place an Upper/Lower anchor or ask listeners to rate those at 0 or 100.
 > This way, we are able to get more ratings on target systems on a fixed evaluation budget.
 > For each MUSHRA test reported, 25-50 testers provide ratings on 50-100 text snippets that range between 5-40 seconds long, such that we achieve about 17-20 hours of total effective listening time per system per test. 
-> - \textbf{Linguistic expert evaluation of "emergent abilities".} To gauge the ability of ***BASE TTS*** to achieve finer understanding of the text, we hand-created an "emergent abilities testset" in English with 7 categories of texts: Questions, Emotions, Compound Nouns, Syntactic Complexities, Foreign Words, Paralinguistics, and Punctuations.
+> - **Linguistic expert evaluation of "emergent abilities".** 
+> To gauge the ability of ***BASE TTS*** to achieve finer understanding of the text, we hand-created an "emergent abilities testset" in English with 7 categories of texts: Questions, Emotions, Compound Nouns, Syntactic Complexities, Foreign Words, Paralinguistics, and Punctuations.
 > In Table \ref{table:emergent-abilities}, we present an example from each category, and how a linguistic expert rates the TTS output on a discrete 3-point scale.
 > These sentences are designed to contain challenging tasks - parsing garden-path sentences \cite{garden-path}, placing phrasal stress on long-winded compound nouns \cite{syntax-prosody}, producing emotional or whispered speech, or producing the correct phonemes for foreign words like "qi" or punctuations like "@" - none of which ***BASE TTS*** is explicitly trained to perform.
 > Our hypothesis is that as ***BASE TTS*** increases in model capacity and trains over more data, the model will start to acquire these abilities, following evidence that scaling in these dimensions begets qualitative ability jumps \cite{sparks, webb2023emergent, wei2022emergent}.
 > We share the full testset in Appendix \ref{appendix:emergent}.
-> - \textbf{Automated objective evaluations} to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)), and speaker similarity. 
+> - **Automated objective evaluations** to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)), and speaker similarity. 
 > We use an ASR model to compute the Word Error Rate (WER) by comparing the testset text (ground truth) against the ASR output from the synthetic speech. 
 > In addition, we employ a [speaker verification model](https://huggingface.co/microsoft/wavlm-base-plus-sv) fine-tuned on [WavLM [39]](../../Models/Speech_Representaion/2021.10.26_WavLM.md) features to obtain speaker embeddings from the original recordings and synthetic speech, and then we compute the cosine distance between them to get a speaker similarity metric (SIM). 
 >
 > For subjective evaluations, we report average MUSHRA scores with $95\%$ confidence intervals.
 > Furthermore, to determine the significance of differences between two systems, we conduct a t-test; if the p-value is $< 0.05$, we consider the difference significant.
-> To aid visualization we mark statistically significantly better systems with \textbf{bold}.
+> To aid visualization we mark statistically significantly better systems with bold.
 
 ## 5.Results: 结果
 
-### 5.1.VQ-VAE speechcode vs.
-> WavLM speechcode
+### 5.1.VQ-VAE speechcode vs. WavLM speechcode
 
 > We conduct MUSHRA evaluations on 6 US English and 4 Spanish (Castilian and US) speakers in order to test comprehensively the quality and generalisability of the two speech tokenization approaches, using both held-out test data for speakers seen in the training ("seen" condition) and unseen speakers ("one-shot" condition). 
 > In terms of average MUSHRA scores for English voices, VQ-VAE and WavLM based system are on par (VQ-VAE: 74.8 vs WavLM: 74.7, the difference is statistically non-significant).
@@ -377,8 +376,7 @@ $$
 > Since WavLM-based system performs at least as well or better as the VQ-VAE baseline, we use it to represent ***BASE TTS*** in further experiments.
 > In Table \ref{VQVAE-WAVLM-TABLE}, we show the results categorized by speaker to provide additional details on per-speaker performance.
 
-### 5.2.Diffusion-Based Decoder vs.
-> Speechcode Decoder
+### 5.2.Diffusion-Based Decoder vs. Speechcode Decoder
 
 > ***BASE TTS*** simplifies over the baseline diffusion-based decoder by proposing an end-to-end speechcode decoder, as described in Section \ref{sec:decoder}.
 > Our approach offers streamability and 3X improvement in inference speed.
@@ -408,10 +406,9 @@ $$
 > By contrast, BASE-medium can perform close to ceiling on English Compound Nouns, while trailing BASE-large slightly in most of the other categories (Foreign Words, Punctuations, Questions, Syntactic Complexity).
 > We remain hopeful that further scaling and injection of textual knowledge from text-only LLM can help us close remaining performance gaps.
 
-### 5.4.***BASE TTS*** vs.
-> industry baselines
+### 5.4.***BASE TTS*** vs. industry baselines
 
-> We select three industry baselines with publicly available pre-trained models: YourTTS \cite{casanova2022yourtts}, Bark\footnote{\url{https://github.com/suno-ai/bark}}, and [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
+> We select three industry baselines with publicly available pre-trained models: [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), Bark\footnote{\url{https://github.com/suno-ai/bark}}, and [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > We conduct the comparison exclusively in one-shot setting, using 10-second reference clip for two US English speakers which ***BASE TTS*** was not previously trained or evaluated on. 
 >
 > As seen in Table \ref{competitor-mushra}, ***BASE TTS*** obtains significantly higher naturalness scores in MUSHRA than baseline systems, among two US English speakers tested.
